2023-09-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Adapt docstring.  (Bug#66093)
	(tramp-handle-make-process): Replace ?a by "-t" if indicated.

	* tramp-sshfs.el (tramp-methods): Use "%a".
	(tramp-sshfs-handle-process-file): Replace ?a by "-t".

2023-09-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region): Fix missing comma.
	(Bug#66123)

2023-09-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-container.el (tramp-skeleton-completion-function):
	Bind `tramp-verbose' to 0.
	(tramp-toolbox--completion-function)
	(tramp-flatpak--completion-function): Use METHOD as argument.
	Use `tramp-skeleton-completion-function'.
	(tramp-completion-multi-hop-methods): Add "toolbox" and "flatpak".

2023-09-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-otp-password-prompt-regexp): New defcustom.
	(tramp-action-otp-password): New defun.

	* tramp-container.el (tramp-skeleton-completion-function): New defmacro.
	(tramp-container--completion-function): Use it.
	(tramp-kubernetes--completion-function): Use METHOD as argument.
	Use `tramp-skeleton-completion-function'.
	(tramp-skeleton-kubernetes-vector): New defmacro.
	(tramp-kubernetes--current-context)
	(tramp-kubernetes--current-context-data): Use it.
	(tramp-completion-multi-hop-methods): Add "kubernetes".

	* tramp-message.el (tramp-debug-message): Publish the name of the
	debug file name.

	* tramp-sh.el (tramp-actions-before-shell)
	(tramp-actions-copy-out-of-band):
	Use `tramp-otp-password-prompt-regexp'.

2023-09-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-ls-file-attributes): New defconst.
	(tramp-do-file-attributes-with-ls): Use it.  (Bug#65324)

2023-09-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (dired-advertise, dired-unadvertise): Declare.
	(tramp-dired-buffer-p, tramp-remote-process-p): Rename.
	(tramp-file-name-with-method): New defcustom.